change design of status banner

--- a/templates/joblist.html
+++ b/templates/joblist.html
@@ -3,7 +3,7 @@
         {{#each jobs}}
         <tr class="job">
             <td class="name">
-                <span class="badge {{#if color_type}}badge-{{color_type}}{{/if}}">s</span>
+                <span class="label {{#if color_type}}label-{{color_type}}{{/if}}">&nbsp;</span>
                 {{name}}
             </td>
             <td class="build">
