--- a/templates/joblist.html
+++ b/templates/joblist.html
@@ -1,9 +1,9 @@
 <table class="table table-hover">
     <tbody>
         {{#each jobs}}
-        <tr class="job">
+        <tr class="job {{status}} {{#if in_progress}}in-progress{{/if}}">
             <td class="name">
-                <span class="label {{#if color_type}}label-{{color_type}}{{/if}}">&nbsp;</span>
+                <label title="{{status}}" class="label {{#if color_type}}label-{{color_type}}{{/if}}">&nbsp;</label>
                 {{name}}
             </td>
             <td class="build">
@@ -11,7 +11,7 @@
                     <div class="bar" style="width: 30%;"></div>
                 </div>
             </td>
-            <td class="job-controls">
+            <td class="controls">
                 <a href="#"><i class="icon-eye-open"></i></a>
                 <a href="#"><i class="icon-play"></i></a>
                 <a href="#"><i class="icon-share"></i></a>
