implement filter button

--- a/templates/filterbtn.html
+++ b/templates/filterbtn.html
@@ -12,7 +12,7 @@
 		<button type="button" class="btn btn-small btn-warning" title="unstable">
 			{{unstable}}
 		</button>
-		<button type="button" class="btn btn-small btn-success" title="success">
+		<button type="button" class="btn btn-small btn-success" title="succeed">
 			{{succeed}}
 		</button>
 		<button type="button" class="btn btn-small btn-info" title="pending">
