--- a/templates/filterbtn.html
+++ b/templates/filterbtn.html
@@ -1,25 +1,32 @@
-<div class="btn-toolbar text-right">
-	<div class="btn-group" data-toggle="buttons-radio">
-		<button type="button" class="btn btn-small btn-primary active" title="all">
-			{{total}}
-		</button>
-		<button type="button" class="btn btn-small btn-danger" title="failed">
-			{{failed}}
-		</button>
-		<button type="button" class="btn btn-small" title="aborted">
-			{{aborted}}
-		</button>
-		<button type="button" class="btn btn-small btn-warning" title="unstable">
-			{{unstable}}
-		</button>
-		<button type="button" class="btn btn-small btn-success" title="succeed">
-			{{succeed}}
-		</button>
-		<button type="button" class="btn btn-small btn-info" title="pending">
-			{{pending}}
-		</button>
-		<button type="button" class="btn btn-small btn-inverse" title="disabled">
-			{{disabled}}
-		</button>
-	</div>
+<div class="btn-toolbar text-right" data-toggle="buttons-radio">
+    <div class="btn-group">
+        <button type="button" class="btn btn-small active" title="all">
+            {{total}}
+        </button>
+    </div>
+    <div class="btn-group">
+        <button type="button" class="btn btn-small btn-danger" title="failed">
+            {{failed}}
+        </button>
+        <button type="button" class="btn btn-small" title="aborted">
+            {{aborted}}
+        </button>
+        <button type="button" class="btn btn-small btn-warning" title="unstable">
+            {{unstable}}
+        </button>
+        <button type="button" class="btn btn-small btn-success" title="succeed">
+            {{succeed}}
+        </button>
+        <button type="button" class="btn btn-small btn-info" title="pending">
+            {{pending}}
+        </button>
+        <button type="button" class="btn btn-small btn-inverse" title="disabled">
+            {{disabled}}
+        </button>
+    </div>
+    <div class="btn-group">
+        <button type="button" class="btn btn-small" title="in-progress">
+            <i class="icon-beaker">{{in_progress}}</i>
+        </button>
+    </div>
 </div>
