add watch button in front html

--- a/templates/joblist.html
+++ b/templates/joblist.html
@@ -2,16 +2,21 @@
     <tbody>
         {{#each jobs}}
         <tr class="job {{status}} {{#if in_progress}}in-progress{{/if}}">
-            <td class="name">
+            <td class="name span8">
               <span data-href="{{url}}lastBuild" title="{{status}}" class="latest-status {{#if color_type}}text-{{color_type}}{{/if}}">
                 <i class="icon-circle"></i>
               </span>
               <span data-href="{{url}}">{{name}}</span>
             </td>
-            <td class="build">
+            <td class="build span3">
                 <div class="progress progress-striped active {{#unless in_progress}}hide{{/unless}}">
                     <div class="bar" style="width: 30%;"></div>
                 </div>
+            </td>
+            <td class="tools span1">
+                <span class="watch {{#unless watched}}hide{{/unless}}">
+                    <a href="#" class="watch-btn"><i class="icon-eye-open"></i></a>
+                </span>
             </td>
         </tr>
         {{/each}}
