add filter watched job button

--- a/templates/jobstoolbar.html
+++ b/templates/jobstoolbar.html
@@ -37,6 +37,9 @@
       <button type="button" class="btn btn-small" title="in-progress">
         <i class="icon-beaker">{{in_progress}}</i>
       </button>
+      <button type="button" class="btn btn-small" title="watched">
+        <i class="icon-eye-open">{{watched}}</i>
+      </button>
     </div>
   </div>
 </div>
